# timeline

./: .eslintrc.js  .flake8  .gitignore  Dockerfile  Procfile  compose-production.yaml  compose.yaml  docker-bake.hcl  manage.py  nuxt.config.js  package.json  pyproject.toml  requirements.txt  timeline.code-workspace
.github/workflows/: build.yaml
backend/: .dockerignore  local_settings.py  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
backend/core/: admin.py  models.py  s3.py  test_s3.py  testcase.py
backend/core/authentication/: serializers.py  urls.py  views.py
backend/core/events/: models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
backend/core/image/: models.py  serializers.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_event_options.py  0002_auto_20240211_1936.py  0003_alter_event_description.py
backend/core/people/: models.py  serializers.py  urls.py  views.py
backend/core/role/: models.py  serializers.py  urls.py  views.py
backend/docker/: Dockerfile  Dockerfile.dev  entrypoint.sh  uwsgi.ini
frontend/: .gitignore  README.md  eslint.config.mjs  nuxt.config.js  package.json  pnpm-lock.yaml  pwa-assets.config.js  tailwind.config.js
frontend/assets/css/: fonts.css  tailwind.css
frontend/components/: Bottomnav.vue  Editor.vue  Event.vue  Gallery.vue  GalleryCaption.vue  Layout.vue  MorphDialog.vue  NavigationDrawer.vue  PersonTabs.vue  PhotoswipeRoot.vue  ProgressLinear.vue  Timeline.vue  mixins.js
frontend/components/fields/: Button.vue  ButtonDelete.vue  ButtonSecondary.vue  DateInput.vue  EmojiField.vue  EventField.vue  Field.vue  MonthSelector.vue  MultiTUSUpload.vue  PersonField.vue  SelectInput.vue  TUSUpload.vue  TextFieldInput.vue  TextInput.vue  field-mixin.js
frontend/components/form/: Form.vue  form-error-mixin.js  form-mixin.js
frontend/components/timeline/: Timeline.vue  TimelineTick.vue
frontend/docker/: Dockerfile  Dockerfile.dev  default.conf.template  nginx.conf
frontend/layouts/: default.vue
frontend/lib/: file.js
frontend/mixins/: modal.js
frontend/pages/: import.vue  index.vue  login.vue  user.vue
frontend/pages/event/: list.vue  new.vue  timeline.vue
frontend/pages/event/[id]/: edit.vue
frontend/pages/event/_id/: edit.vue
frontend/pages/person/: index.vue  new.vue
frontend/pages/person/[id]/: edit.vue
frontend/pages/person/_id/: edit.vue
frontend/pages/role/: index.vue  new.vue
frontend/pages/role/[id]/: edit.vue
frontend/pages/role/_id/: edit.vue
frontend/pages/settings/: index.vue
frontend/plugins/: agile.js  axios.js  breakpoints.js  config.js  device.js  dompurify.js  filters.js  pinia-persist.js  theme.js  toast.js  vuex-persist.js
frontend/public/: .gitignore
frontend/store/: auth.js  theme.js
timeline/: asgi.py  serializers.py  settings.py  storage_backends.py  testcase.py  urls.py  wsgi.py
timeline/authentication/: admin.py  apps.py  serializers.py  urls.py  views.py
timeline/events/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
timeline/events/migrations/: 0001_initial.py  0002_alter_event_description.py  0002_alter_event_icon.py  0003_alter_event_description.py  0003_alter_event_icon.py  0004_alter_event_icon.py  0004_auto_20220223_2108.py  0005_alter_event_description.py  0005_auto_20220730_1641.py  0006_alter_event_icon.py
timeline/image/: apps.py  models.py  serializers.py  views.py
timeline/image/migrations/: 0001_initial.py
timeline/people/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
timeline/people/migrations/: 0001_initial.py
