[tool.poetry]
name = "timeline"
version = "0.1.0"
description = "Timeline für Ereignisse, die im Leben von Maxine passieren."
authors = ["Kevin Bieri <bierike@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
django-configurations = "^2.3.2"
Pillow = "^9.0.1"
django-tus = {git = "https://github.com/alican/django-tus.git"}
django-cors-headers = "^3.11.0"
django-editorjs-fields = "^0.2.6"
django-cleanup = "^6.0.0"
sorl-thumbnail = "^12.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
