[tool.poetry]
name = "timeline"
version = "0.1.0"
description = "Timeline für Ereignisse, die im Leben von Maxine passieren."
authors = ["Kevin Bieri <bierike@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
django-extensions = "^3.1.5"
django-filter = "^21.1"
Pillow = "^9.0.1"
django-cors-headers = "^3.11.0"
django-editorjs-fields = "^0.2.6"
django-cleanup = "^6.0.0"
sorl-thumbnail = "^12.7.0"
djangorestframework-recursive = "^0.1.2"
django-heroku = "^0.3.1"
django-storages = "^1.12.3"
boto3 = "^1.21.32"
django-tus = "^0.5.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
