[tool.poetry]
name = "timeline"
version = "0.1.0"
description = "Timeline für Ereignisse, die im Leben von Maxine passieren."
authors = ["Kevin Bieri <bierike@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^3.2.8"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
django-filter = "^22.1"
django-cleanup = "^6.0.0"
sorl-thumbnail = "^12.9.0"
django-storages = "^1.13.2"
boto3 = "^1.26.54"
gunicorn = "^20.1.0"
django-rest-knox = "^4.2.0"
pyvips = "^2.2.1"
pillow = "^10.0.0"
ruff = "^0.2.1"
django-tus = {git = "https://github.com/alican/django-tus", rev = "2aac2e7c0e6bac79a1cb07721947a48d9cc40ec8"}
django-configurations = "^2.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
model-bakery = "^1.10.1"
pluck = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 125
