[tool.poetry]
name = "timeline"
version = "0.1.0"
description = "Timeline für Ereignisse, die im Leben von Maxine passieren."
authors = ["Kevin Bieri <bierike@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.3"
psycopg2 = "^2.9.5"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.1"
django-filter = "^24.3"
django-cleanup = "^9.0.0"
sorl-thumbnail = "^12.9.0"
django-storages = "^1.13.2"
boto3 = "^1.26.54"
django-rest-knox = "^5.0.2"
pyvips = "^2.2.1"
pillow = "^11.0.0"
django-tus = {git = "https://github.com/alican/django-tus", rev = "2aac2e7c0e6bac79a1cb07721947a48d9cc40ec8"}
django-configurations = "^2.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.poetry.group.test.dependencies]
model-bakery = "^1.20.0"
pluck = "^0.2"

[tool.poetry.group.prod.dependencies]
uwsgi = "^2.0.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 125

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "PT", "ARG001", "ARG002", "RUF012", "ISC", "COM", "TRY003", "EM101"]

[tool.ruff.lint.per-file-ignores]
"core/migrations/*" = ["E501"]
"core/**/test*.py" = ["S107", "S106", "S105", "S311"]
